--- a/server/package.json
+++ b/server/package.json
@@ -1,10 +1,13 @@
 {
   "scripts": {
     "dev": "cross-env NODE_ENV=development tsnd --respawn -r tsconfig-paths/register ./src/index.ts",
+    "db:proto": "prisma db push",
+    "db:migrate": "prisma migrate dev",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
     "@googleapis/oauth2": "^0.2.0",
+    "@prisma/client": "^2.30.3",
     "cookie-parser": "^1.4.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
@@ -14,8 +17,10 @@
   "devDependencies": {
     "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.5",
     "@types/morgan": "^1.9.3",
     "cross-env": "^7.0.3",
+    "prisma": "^2.30.3",
     "ts-node-dev": "^1.1.8",
     "tsconfig-paths": "^3.11.0",
     "typescript": "^4.4.2"
