--- a/server/package.json
+++ b/server/package.json
@@ -1,8 +1,10 @@
 {
   "scripts": {
+    "ts-node": "ts-node --compiler-options \"{\\\"module\\\":\\\"commonjs\\\"}\"",
     "dev": "cross-env NODE_ENV=development tsnd --respawn -r tsconfig-paths/register ./src/index.ts",
     "db:proto": "prisma db push",
     "db:migrate": "prisma migrate dev",
+    "db:seed": "prisma db seed --preview-feature",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
@@ -11,6 +13,7 @@
     "cookie-parser": "^1.4.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "joi": "^17.4.2",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0"
   },
@@ -21,6 +24,7 @@
     "@types/morgan": "^1.9.3",
     "cross-env": "^7.0.3",
     "prisma": "^2.30.3",
+    "ts-node": "^10.2.1",
     "ts-node-dev": "^1.1.8",
     "tsconfig-paths": "^3.11.0",
     "typescript": "^4.4.2"
