--- a/server/package.json
+++ b/server/package.json
@@ -8,11 +8,11 @@
     "cookie-parser": "^1.4.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "joi": "^17.4.2",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.95.11",
     "morgan": "^1.10.0",
-    "pg": "^8.7.1"
+    "pg": "^8.7.1",
+    "zod": "^3.8.2"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.2",
