--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "dev": "cross-env NODE_ENV=development tsnd --respawn -r tsconfig-paths/register --files ./src/index.ts",
+    "dev": "cross-env DEBUG=knex:query NODE_ENV=development tsnd --respawn -r tsconfig-paths/register --files ./src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
@@ -11,6 +11,7 @@
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.95.11",
     "morgan": "^1.10.0",
+    "nanoid": "^3.1.25",
     "pg": "^8.7.1",
     "zod": "^3.8.2"
   },
