add `projects` table to parent tasks

--- a/server/package.json
+++ b/server/package.json
@@ -1,8 +1,11 @@
 {
   "scripts": {
     "dev": "cross-env DEBUG=knex:query NODE_ENV=development tsnd --respawn -r tsconfig-paths/register --files ./src/index.ts",
+    "build": "tsc",
     "migration:new": "knex migrate:make",
-    "migration:run": "knex migrate:latest",
+    "migration:latest": "knex migrate:latest",
+    "migration:rollback": "knex migrate:rollback",
+    "migration:list": "knex migrate:list",
     "seed:new": "knex seed:make",
     "seed:run": "knex seed:run",
     "postinstall": "node ./scripts/post-install.js",
@@ -23,10 +26,12 @@
   "devDependencies": {
     "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.13",
+    "@types/faker": "^5.5.9",
     "@types/jsonwebtoken": "^8.5.5",
     "@types/morgan": "^1.9.3",
     "@types/node": "^16.9.1",
     "cross-env": "^7.0.3",
+    "faker": "^5.5.3",
     "ts-node": "^10.2.1",
     "ts-node-dev": "^1.1.8",
     "tsconfig-paths": "^3.11.0",
