--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,7 @@
     "migration:list": "knex migrate:list",
     "seed:new": "knex seed:make",
     "seed:run": "knex seed:run",
-    "postinstall": "node ./scripts/post-install.js",
+    "postinstall": "node ./scripts/postinstall.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
