--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "@googleapis/oauth2": "^0.2.0",
+    "bcrypt": "^5.0.1",
     "cookie-parser": "^1.4.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
@@ -23,6 +23,7 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^6.1.2",
+    "@types/bcrypt": "^5.0.0",
     "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.8",
