--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "knex": "^1.0.5",
     "morgan": "^1.10.0",
     "nanoid": "^3.3.2",
+    "nodemailer": "^6.7.3",
     "pg": "^8.7.3",
     "zod": "^3.14.4"
   },
@@ -29,6 +30,7 @@
     "@types/jsonwebtoken": "^8.5.8",
     "@types/morgan": "^1.9.3",
     "@types/node": "^17.0.23",
+    "@types/nodemailer": "^6.4.4",
     "cross-env": "^7.0.3",
     "ts-node": "^10.7.0",
     "ts-node-dev": "^1.1.8",
