--- a/server/.env.example
+++ b/server/.env.example
@@ -3,6 +3,7 @@ GOOGLE_CLIENT_SECRET="your_google_client_secret"
 DATABASE_URL="postgresql://postgres:postgres@localhost:5432/task_tracker"
 ROOT_URL="http://localhost:5000"
 ACCESS_TOKEN_SECRET="random_string_of_characters_numbers_and_symbols"
+VERIFICATION_TOKEN_SECRET="another_random_string_of_characters_numbers_and_symbols"
 EMAIL_ADDRESS = "noreply@service.com"
 EMAIL_PASSWORD = "password"
 EMAIL_NAME = "No Reply"
