--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,8 @@
     "cookie-parser": "^1.4.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "gray-matter": "^4.0.3",
+    "handlebars": "^4.7.7",
     "jsonwebtoken": "^8.5.1",
     "knex": "^1.0.5",
     "morgan": "^1.10.0",
