setup redis client

--- a/server/.env.example
+++ b/server/.env.example
@@ -4,6 +4,8 @@ DATABASE_URL="postgresql://postgres:postgres@localhost:5432/task_tracker"
 ROOT_URL="http://localhost:5000"
 ACCESS_TOKEN_SECRET="random_string_of_characters_numbers_and_symbols"
 VERIFICATION_TOKEN_SECRET="another_random_string_of_characters_numbers_and_symbols"
-EMAIL_ADDRESS = "noreply@service.com"
-EMAIL_PASSWORD = "password"
-EMAIL_NAME = "No Reply"
+EMAIL_ADDRESS="noreply@service.com"
+EMAIL_PASSWORD="password"
+EMAIL_NAME="No Reply"
+REDIS_URL="redis://localhost:6379"
+REDIS_PASSWORD="redis_password"
