--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "nanoid": "^3.3.2",
     "nodemailer": "^6.7.3",
     "pg": "^8.7.3",
+    "redis": "^4.0.6",
     "zod": "^3.14.4"
   },
   "devDependencies": {
