--- a/web/package.json
+++ b/web/package.json
@@ -2,27 +2,22 @@
   "name": "@task-tracker/web",
   "version": "1.0.0",
   "private": true,
+  "license": "MIT",
   "scripts": {
-    "dev": "webpack s",
-    "build": "webpack b --env production"
+    "dev": "vite --host",
+    "build": "tsc && vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.15.4",
-    "@babel/preset-env": "^7.15.4",
-    "@babel/preset-react": "^7.14.5",
-    "@babel/preset-typescript": "^7.15.0",
-    "@types/react": "^17.0.19",
-    "@types/react-dom": "^17.0.9",
-    "babel-loader": "^8.2.2",
-    "fork-ts-checker-webpack-plugin": "^7.2.3",
-    "html-webpack-plugin": "^5.3.2",
-    "typescript": "^4.4.2",
-    "webpack": "^5.71.0",
-    "webpack-cli": "^4.8.0",
-    "webpack-dev-server": "^4.1.0"
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
+    "@vitejs/plugin-react": "^1.3.0",
+    "typescript": "^4.6.3",
+    "vite": "^2.9.9",
+    "vite-plugin-checker": "^0.4.6"
   }
 }
