--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "cookie-parser": "^1.4.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "geoip-lite": "^1.4.5",
     "gray-matter": "^4.0.3",
     "handlebars": "^4.7.7",
     "jsonwebtoken": "^8.5.1",
@@ -23,6 +24,7 @@
     "nodemailer": "^6.7.3",
     "pg": "^8.7.3",
     "redis": "^4.0.6",
+    "useragent": "^2.3.0",
     "zod": "^3.14.4"
   },
   "devDependencies": {
@@ -30,10 +32,12 @@
     "@types/bcrypt": "^5.0.0",
     "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.13",
+    "@types/geoip-lite": "^1.4.1",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/morgan": "^1.9.3",
     "@types/node": "^17.0.23",
     "@types/nodemailer": "^6.4.4",
+    "@types/useragent": "^2.3.1",
     "cross-env": "^7.0.3",
     "ts-node": "^10.7.0",
     "ts-node-dev": "^1.1.8",
