implement forgot password

--- a/server/.env.example
+++ b/server/.env.example
@@ -1,6 +1,8 @@
 DATABASE_URL="postgresql://postgres:postgres@localhost:5432/task_tracker"
 ROOT_URL="http://localhost:5000"
+FRONTEND_ROOT_URL="http://localhost:3000"
 VERIFICATION_TOKEN_SECRET="random_string_of_characters_numbers_and_symbols"
+FORGOT_PASSWORD_TOKEN_SECRET="another_random_string_of_characters_numbers_and_symbols"
 EMAIL_SERVICE="Gmail"
 EMAIL_ADDRESS="noreply@yourapp.com"
 EMAIL_PASSWORD="email_password"
