--- a/server/package.json
+++ b/server/package.json
@@ -37,6 +37,7 @@
     "@types/morgan": "^1.9.3",
     "@types/node": "^17.0.23",
     "@types/nodemailer": "^6.4.4",
+    "@types/pg": "^8.6.5",
     "@types/useragent": "^2.3.1",
     "cross-env": "^7.0.3",
     "ts-node": "^10.7.0",
