--- a/server/package.json
+++ b/server/package.json
@@ -12,37 +12,37 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "cookie-parser": "^1.4.5",
-    "dotenv": "^16.0.0",
-    "express": "^4.17.3",
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
     "geoip-lite": "^1.4.5",
     "gray-matter": "^4.0.3",
     "handlebars": "^4.7.7",
     "jsonwebtoken": "^8.5.1",
-    "knex": "^1.0.5",
+    "knex": "^2.2.0",
     "morgan": "^1.10.0",
-    "nanoid": "^3.3.2",
-    "nodemailer": "^6.7.3",
+    "nanoid": "3.3.2",
+    "nodemailer": "^6.7.7",
     "pg": "^8.7.3",
-    "redis": "^4.0.6",
+    "redis": "^4.2.0",
     "useragent": "^2.3.0",
-    "zod": "^3.14.4"
+    "zod": "^3.17.10"
   },
   "devDependencies": {
-    "@faker-js/faker": "^6.1.2",
+    "@faker-js/faker": "^7.3.0",
     "@types/bcrypt": "^5.0.0",
-    "@types/cookie-parser": "^1.4.2",
+    "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.13",
     "@types/geoip-lite": "^1.4.1",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/morgan": "^1.9.3",
-    "@types/node": "^17.0.23",
-    "@types/nodemailer": "^6.4.4",
+    "@types/node": "^18.6.4",
+    "@types/nodemailer": "^6.4.5",
     "@types/pg": "^8.6.5",
     "@types/useragent": "^2.3.1",
     "cross-env": "^7.0.3",
-    "ts-node": "^10.7.0",
-    "ts-node-dev": "^1.1.8",
-    "tsconfig-paths": "^3.14.1",
-    "typescript": "^4.6.3"
+    "ts-node": "^10.9.1",
+    "ts-node-dev": "^2.0.0",
+    "tsconfig-paths": "^4.1.0",
+    "typescript": "^4.7.4"
   }
 }
