--- a/web/package.json
+++ b/web/package.json
@@ -14,6 +14,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
+    "react-hook-form": "^7.34.2",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
