--- a/web/package.json
+++ b/web/package.json
@@ -36,6 +36,7 @@
     "@types/styled-components": "^5.1.26",
     "@vitejs/plugin-react": "^2.0.0",
     "babel-loader": "^8.2.5",
+    "sass": "^1.57.1",
     "tsconfig-paths-webpack-plugin": "^4.0.0",
     "typescript": "^4.7.4",
     "vite": "^3.0.4",
