--- a/web/package.json
+++ b/web/package.json
@@ -7,8 +7,8 @@
     "dev": "vite --host",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "sb": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "sb:dev": "storybook dev -p 6006",
+    "sb:build": "storybook build"
   },
   "dependencies": {
     "@hookform/resolvers": "^2.9.10",
@@ -23,13 +23,13 @@
   },
   "devDependencies": {
     "@babel/core": "^7.18.10",
-    "@storybook/addon-actions": "^6.5.10",
-    "@storybook/addon-essentials": "^6.5.10",
-    "@storybook/addon-interactions": "^6.5.10",
-    "@storybook/addon-links": "^6.5.10",
-    "@storybook/builder-vite": "^0.2.2",
-    "@storybook/react": "^6.5.10",
-    "@storybook/testing-library": "^0.0.13",
+    "@storybook/addon-actions": "^7.0.9",
+    "@storybook/addon-essentials": "^7.0.9",
+    "@storybook/addon-interactions": "^7.0.9",
+    "@storybook/addon-links": "^7.0.9",
+    "@storybook/react": "^7.0.9",
+    "@storybook/react-vite": "^7.0.9",
+    "@storybook/testing-library": "^0.1.0",
     "@types/estree": "^1.0.0",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
@@ -37,9 +37,11 @@
     "@vitejs/plugin-react": "^2.0.0",
     "babel-loader": "^8.2.5",
     "sass": "^1.57.1",
+    "storybook": "^7.0.9",
     "tsconfig-paths-webpack-plugin": "^4.0.0",
     "typescript": "^4.7.4",
     "vite": "^3.0.4",
     "vite-plugin-checker": "^0.4.9"
   }
 }
+
