--- a/server/package.json
+++ b/server/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "cross-env DEBUG=knex:query NODE_ENV=development tsnd --rs -r tsconfig-paths/register --files ./src/index.ts",
-    "build": "tsc",
+    "dev": "cross-env NODE_ENV=development tsnd --rs -r tsconfig-paths/register --files ./src/index.ts",
+    "build": "tsc && tsc-alias && copyfiles ./src/services/emailService/templates/*.hbs ./dist/services/emailService -u 3",
     "knex": "knex --knexfile=./db/knexfile.ts",
     "postinstall": "node ./scripts/postinstall.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -39,9 +39,11 @@
     "@types/nodemailer": "^6.4.6",
     "@types/pg": "^8.6.5",
     "@types/useragent": "^2.3.1",
+    "copyfiles": "^2.4.1",
     "cross-env": "^7.0.3",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
+    "tsc-alias": "^1.8.6",
     "tsconfig-paths": "^4.1.0",
     "typescript": "^4.7.4"
   }
