--- a/web/package.json
+++ b/web/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-error-boundary": "^4.0.4",
     "react-feather": "^2.0.10",
     "react-hook-form": "^7.34.2",
     "react-router-dom": "^6.3.0",
@@ -44,4 +45,3 @@
     "vite-plugin-checker": "^0.4.9"
   }
 }
-
