--- a/web/package.json
+++ b/web/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@hookform/resolvers": "^2.9.10",
     "@tanstack/react-query": "^4.29.3",
+    "@tanstack/react-query-devtools": "^4.29.12",
     "axios": "^1.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
